<resources>
    <string name="app_name">NimbleShop</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">972472256122146</string>
    <string name="button_text">Login / Sign Up</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_search">Map</string>
    <string name="title_activity_wait_list_prediction">WaitListPredictionActivity</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="Groceries">Groceries</string>
    <string name="Milk">Milk</string>
    <string name="Eggs">Eggs</string>
    <string name="Bread">Bread</string>
    <string name="Chicken">Chicken</string>
    <string name="Wine">Wine</string>
    <string name="Whiskey">Whiskey</string>
    <string name="Beer">Beer</string>
    <string name="Coffee">Coffee</string>

    <string name="getWaitTimesTemplate">Get Wait Times</string>
    <string name="navigation">Get Locations</string>

    <string name="title_activity_wait_list_prediction_template">WaitListPredictionTemplateActivity
    </string>
    <string name="title_activity_prodrecmndtn">ProdrecmndtnActivity</string>
    <string name="title_activity_location_marker">locationMarker</string>
    <string name="title_activity_location_template">LocationTemplate</string>

</resources>
